--- a/README
+++ b/README
@@ -1,3 +1,13 @@
+*******************************************************************************
+Prerequisites
+*******************************************************************************
+gem install json mocha halo-reach-api
+
+*******************************************************************************
+
+
+
+
 Game Variant Codes for JSON API
 
 0 : All? Competitive?
