reworked a few things in the rakefile to ensure that the database exists prior to tests.  created a weapons table for all the static weapons data. created a player statitics table to store all the data gotten from the client.

--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 *******************************************************************************
 Prerequisites
 *******************************************************************************
-gem install json mocha halo-reach-api
+
+$ gem install json mocha halo-reach-api sqlite3
 
 *******************************************************************************
 
