added logging so we can actually see what happens during the batch update. added some error handling. added some queries for stats that we might find useful.

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 Prerequisites
 *******************************************************************************
 
-$ gem install json mocha halo-reach-api sqlite3
+$ gem install json mocha halo-reach-api sqlite3 mysql2
 
 *******************************************************************************
 
